--- a/about.html
+++ b/about.html
@@ -30,62 +30,70 @@
       <img src="img\jumbo-about.png" alt="Highway Timelapse">
     </header>
     <section>
-      
-      <h2>About</h2>
+      <div class="about">
+        <h2>About</h2>
 
-      <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
-      corporate
-      strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
-      world view of disruptive innovation via workplace diversity and empowerment.</p>
+        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
+          corporate
+          strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
+          world view of disruptive innovation via workplace diversity and empowerment.</p>
+      </div>
     </section>
 
     <section>
-      <img src="img/about-plan.png" alt="strategy">
+      <div class="card">
+        <img src="img/about-plan.png" alt="strategy">
 
-      Strategy
+        <h2>Strategy</h2>
 
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-      proposition.
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      Learn More
+        <button>Learn More</button>
+      </div>
 
+      <div class="card">
+        <img src="img/about-working.png" alt="strategy">
 
+        <h2>How We Work</h2>
 
-      <img src="img/about-working.png" alt="strategy">
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      How We Work
+        <button>Learn More</button>
+      </div>
 
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-      proposition.
+      <div class="card">
+        <img src="img/about-office.png" alt="strategy">
 
-      Learn More
+        <h2>Places We Work</h2>
 
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
+        <button>Learn More</button>
+      </div>
 
-      <img src="img/about-office.png" alt="strategy">
+      <div class="card">
+        <img src="img/about-meeting.png" alt="strategy">
 
-      Places We Work
+        <h2>Collaboration</h2>
 
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-      proposition.
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      Learn More
+        <button>Learn More</button>
+      </div>
+    </section>
+    <section>
+      <div class="work">
+        <h2>Let's Work Together</h2>
 
-      <img src="img/about-meeting.png" alt="strategy">
-
-      Collaboration
-
-      Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-      proposition.
-
-      Learn More
-
-      Let's Work Together
-
-      Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
-      corporate
-      strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
-      world view of disruptive innovation via workplace diversity and empowerment.
+        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
+          corporate
+          strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
+          world view of disruptive innovation via workplace diversity and empowerment.</p>
+      </div>
     </section>
 
     <footer>
