--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <img src="img\lambda-black.png" alt="Lambda Logo">
         <nav>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="">Products</a></li>
             <li><a href="">Blog</a></li>
@@ -41,50 +41,53 @@
     </section>
 
     <section>
-      <div class="card">
-        <img src="img/about-plan.png" alt="strategy">
+      <div class="card-container">
+        <div class="card">
+          <img src="img/about-plan.png" alt="strategy">
 
-        <h2>Strategy</h2>
+          <h2>Strategy</h2>
 
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.</p>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition.</p>
 
-        <button>Learn More</button>
-      </div>
+          <button>Learn More</button>
+        </div>
 
-      <div class="card">
-        <img src="img/about-working.png" alt="strategy">
+        <div class="card">
+          <img class="img1" src="img/about-working.png" alt="strategy">
 
-        <h2>How We Work</h2>
+          <h2>How We Work</h2>
 
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.</p>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition.</p>
 
-        <button>Learn More</button>
-      </div>
+          <button>Learn More</button>
+        </div>
 
-      <div class="card">
-        <img src="img/about-office.png" alt="strategy">
+        <div class="card">
+          <img src="img/about-office.png" alt="strategy">
 
-        <h2>Places We Work</h2>
+          <h2>Places We Work</h2>
 
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.</p>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition.</p>
 
-        <button>Learn More</button>
-      </div>
+          <button>Learn More</button>
+        </div>
 
-      <div class="card">
-        <img src="img/about-meeting.png" alt="strategy">
+        <div class="card">
+          <img class="img2" src="img/about-meeting.png" alt="strategy">
 
-        <h2>Collaboration</h2>
+          <h2>Collaboration</h2>
 
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-          proposition.</p>
+          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+            proposition.</p>
 
-        <button>Learn More</button>
+          <button>Learn More</button>
+        </div>
       </div>
     </section>
+
     <section>
       <div class="work">
         <h2>Let's Work Together</h2>
