--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="img\lambda-black.png" alt="Lambda Logo">
                 <nav>
                     <ul>
-                        <li><a href="">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="">Products</a></li>
                         <li><a href="">Blog</a></li>
@@ -86,8 +86,8 @@
 
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
